--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.18",
+    "expo-calendar": "~11.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "react-native-svg": "13.4.0",
     "react-native-safe-area-context": "4.5.0",
-    "expo-calendar": "~11.1.1",
-    "expo-notifications": "~0.18.1"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
