--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "dotenv": "^16.1.3",
     "knex": "^2.4.2",
