--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,7 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
