--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-calendar": "~11.1.1",
@@ -23,6 +24,8 @@
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-health": "^1.14.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
