--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,6 +20,7 @@
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
@@ -37,6 +38,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native-vector-icons": "^6.4.13",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
   "private": true
