login page, backfront connect

--- a/my-app/app.json
+++ b/my-app/app.json
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+
     "assetBundlePatterns": ["**/*"],
     "plugins": [
       [
@@ -22,16 +23,28 @@
       ["expo-notifications"]
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "conifg": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.READ_CALENDAR",
+        "android.permission.WRITE_CALENDAR"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4ed12dde-57cc-422e-a189-9ef4554c2803"
+      }
     }
   }
 }
