--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,25 +9,33 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@kilohealth/rn-fitness-tracker": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-calendar": "~11.1.1",
+    "expo-dev-client": "^2.2.1",
     "expo-notifications": "~0.18.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
-    "react-native-health": "^1.14.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
