--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "knex": "^2.4.2",
     "nestjs-knex": "^2.0.0",
