--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,11 +25,14 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.4.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.1.3",
     "knex": "^2.4.2",
+    "listening-on": "^2.0.9",
     "nestjs-knex": "^2.0.0",
     "pg": "^8.11.0",
     "playwright": "^1.34.3",
+    "populate-env": "^2.0.0",
     "quick-erd": "^4.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -39,6 +41,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/debug": "^4.1.8",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
@@ -56,7 +59,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.0.0"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
