--- a/my-app/app.json
+++ b/my-app/app.json
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "scheme": "myapp",
 
     "assetBundlePatterns": ["**/*"],
     "plugins": [
@@ -39,7 +40,8 @@
       ]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "extra": {
       "eas": {
