--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "main": "index.js",
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@kilohealth/rn-fitness-tracker": "^3.1.0",
@@ -18,8 +19,11 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-calendar": "~11.1.1",
+    "expo-constants": "~14.2.1",
     "expo-dev-client": "^2.2.1",
+    "expo-linking": "~4.0.1",
     "expo-notifications": "~0.18.1",
+    "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -31,6 +35,7 @@
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-device-info": "^10.6.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-permissions": "^3.8.0",
@@ -40,6 +45,10 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.7"
+  },
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
