--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
     "dotenv": "^16.1.3",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "listening-on": "^2.0.9",
     "nestjs-knex": "^2.0.0",
