--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "debug": "^4.3.4",
     "dotenv": "^16.1.3",
     "knex": "^2.4.2",
