kill expo route

--- a/my-app/app.json
+++ b/my-app/app.json
@@ -11,7 +11,6 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "scheme": "myapp",
 
     "assetBundlePatterns": ["**/*"],
     "plugins": [
@@ -40,8 +39,7 @@
       ]
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
