--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -42,6 +42,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
