--- a/my-app/package.json
+++ b/my-app/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-device-info": "^10.6.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
@@ -48,7 +49,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.13",
+    "metro": "^0.76.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
