--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -27,6 +27,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "debug": "^4.3.4",
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
