--- a/nest-js/tsconfig.json
+++ b/nest-js/tsconfig.json
@@ -18,7 +18,8 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "strictPropertyInitialization": false
   },
   "exclude": ["out"]
 }
