--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native-table-component": "^1.2.4",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-calendar": "~11.1.1",
@@ -43,6 +44,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.7"
