--- a/my-app/app.json
+++ b/my-app/app.json
@@ -24,7 +24,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "conifg": {
+      "config": {
         "usesNonExemptEncryption": false
       }
     },
