--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
+    "pngjs": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
