--- a/my-app/package.json
+++ b/my-app/package.json
@@ -44,6 +44,7 @@
     "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-svg": "13.4.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
