--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@types/react-native-table-component": "^1.2.4",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
