--- a/my-app/package.json
+++ b/my-app/package.json
@@ -39,6 +39,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.3.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-permissions": "^3.8.0",
