--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -36,6 +36,7 @@
     "knex": "^2.4.2",
     "listening-on": "^2.0.9",
     "nestjs-knex": "^2.0.0",
+    "openai": "^3.3.0",
     "pg": "^8.11.0",
     "playwright": "^1.34.3",
     "populate-env": "^2.0.0",
