--- a/my-app/package.json
+++ b/my-app/package.json
@@ -50,7 +50,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-segmented-control-tab": "^4.0.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.9.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
@@ -62,9 +62,9 @@
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "metro": "^0.76.6",
+    "pod-install": "0.1.38",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.4",
-    "pod-install": "0.1.38"
+    "typescript": "^4.9.4"
   },
   "private": true,
   "reactNativePermissionsIOS": [
@@ -88,5 +88,8 @@
     "Siri",
     "SpeechRecognition",
     "StoreKit"
-  ]
+  ],
+  "resolutions": {
+    "react-native-gifted-charts/react-native-svg": "13.9.0"
+  }
 }
