--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,7 +24,7 @@
     "expo": "~48.0.18",
     "expo-calendar": "~11.1.1",
     "expo-constants": "~14.2.1",
-    "expo-dev-client": "^2.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-linking": "~4.0.1",
     "expo-notifications": "~0.18.1",
     "expo-secure-store": "~12.1.1",
