--- a/my-app/package.json
+++ b/my-app/package.json
@@ -52,6 +52,7 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-select-dropdown": "^3.3.4",
     "react-native-svg": "^13.9.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
