--- a/my-app/package.json
+++ b/my-app/package.json
@@ -46,6 +46,7 @@
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-permissions": "^3.8.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
