exercise date picker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "liveServer.settings.port": 5501,
-  "cSpell.words": [
-    "caretleft",
-    "caretright",
-    "Entypo"
-  ]
+  "liveServer.settings.port": 5501
 }
