--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@kilohealth/rn-fitness-tracker": "^3.1.0",
     "@mohalla-tech/react-native-date-time-picker": "^2.0.1",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
@@ -38,6 +39,7 @@
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
     "react-native-calendars": "^1.1298.0",
+    "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
