--- a/nest-js/tsconfig.json
+++ b/nest-js/tsconfig.json
@@ -18,8 +18,7 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": true,
-    "strictPropertyInitialization": false
+    "noFallthroughCasesInSwitch": true
   },
   "exclude": ["out"]
 }
