--- a/nest-js/package.json
+++ b/nest-js/package.json
@@ -23,13 +23,20 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "debug": "^4.3.4",
     "dotenv": "^16.1.3",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "listening-on": "^2.0.9",
     "nestjs-knex": "^2.0.0",
+    "openai": "^3.3.0",
     "pg": "^8.11.0",
     "playwright": "^1.34.3",
     "populate-env": "^2.0.0",
@@ -41,6 +48,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
