--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
     "react-native-calendars": "^1.1298.0",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
     "react-native-dotenv": "^3.4.8",
